# komtek

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
komtek/handbooks/: admin.py  models.py  serializers.py  urls.py  views.py
komtek/handbooks/migrations/: 0001_initial.py  0002_remove_element_identifier_remove_handbook_identifier_and_more.py  0003_alter_element_id_alter_handbook_id_and_more.py  0004_alter_element_id_alter_handbook_id_and_more.py  0005_alter_element_version_alter_versionhandbook_handbook.py
komtek/komtek/: settings.py  urls.py
